fix spacing

--- a/src/styles/boarding_ticket.css
+++ b/src/styles/boarding_ticket.css
@@ -82,8 +82,16 @@
     align-items: center;
 }
 
+.top-row-boxes {
+    justify-content: center;
+    align-items: center; 
+    text-align: left; 
+    padding: 10px; 
+}
+
+
 .top-row-boxes, .bottom-row-boxes p {
-    line-height: 0;
+    line-height: 1.5;
 }
 
 .top-row-boxes p {
@@ -93,16 +101,19 @@
 .top-row-boxes p.from-to {
     font-size: 22px;
     margin-bottom: 0.5;
+    margin: 0 0 5px 0;
 }
 
 .top-row-boxes p.airports {
     font-size: 26px;
     margin-bottom: 0;
     font-weight: bold;
+    margin: 0 0 10px 0;
 }
 
 .top-row-boxes p.time {
-    margin-top: 30px;
+    font-size: 18px;
+    margin: 5px 0;
 }
 
 .top-row-box {
